discussion/kv_engine/155325/155325_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: Id59d503a56fd211f798fbbfb25344e2b41ecb590

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-14 16:51:53.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 17:05:46.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36867/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31496/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31496/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11445/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11445/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11598/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11598/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11871/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19460/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19460/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9874/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9874/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9874/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10526/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
